tmp redis client

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     build: 
       context: ./
       dockerfile: ./Dockerfile_downloader
+    command: 
+      ["python", "-m", "downloader.py"]
     links:
       - redis
 
