Add redis client, need to fix compose connection issue

--- a/Dockerfile_downloader
+++ b/Dockerfile_downloader
@@ -2,7 +2,10 @@ FROM python:slim
 
 WORKDIR /app
 
+# install python deps
 COPY ./requirements.txt /app/
-COPY ./*.py /app/
-
 RUN pip install -r /app/requirements.txt
+
+# copy app code
+COPY ./*.py /app/
+COPY ./.env /app/.env
