--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,11 @@ services:
       context: ./
       dockerfile: ./Dockerfile_downloader
     command: 
-      ["python", "-m", "downloader.py"]
+      ["python", "downloader.py"]
     links:
       - redis01
+    #environment: 
+    #  REDIS_URL: redis01
     #depends_on: 
     #  - redis01
 
@@ -18,8 +20,8 @@ services:
 #    ports:
 #      - "6397:6397"
   
-  redis-client:
-    image: centos:7
-    command: "ping redis01"
+#  redis-client:
+#    image: centos:7
+#    command: "ping redis01"
 #    links: 
 #      - redis01
