--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,14 @@ version: '3.0'
 
 services:
 
+# download all ROM's
+  parser:
+    build:
+      context: ./
+      dockerfile: Dockerfile_fetcher
+
+
+# not used
   downloader:
     build: 
       context: ./
